--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
-    "lenis": "^1.1.18",
     "lucide-react": "^0.461.0",
     "next": "14.2.4",
     "next-themes": "^0.4.3",
