--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.461.0",
+    "motion": "^12.4.3",
     "next": "14.2.4",
     "next-themes": "^0.4.3",
     "react": "^18",
